[Swagger] update
