# other/api/swagger.yaml
@@ -84,37 +84,6 @@ paths:
         "404":
           description: "Activity not found"
       x-swagger-router-controller: "Activity"
-  /contacts:
-    get:
-      tags:
-      - "contact"
-      summary: "Contact of Person or Farm"
-      description: "List of contacts"
-      operationId: "contactGET"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "offset"
-        in: "query"
-        description: "Pagination offset. Default is 0."
-        required: false
-        type: "integer"
-      - name: "limit"
-        in: "query"
-        description: "Maximum number of items per page. Default is 20 and cannot exceed\
-          \ 500."
-        required: false
-        type: "integer"
-      responses:
-        "200":
-          description: "A collection of Contacts"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Contact"
-        "404":
-          description: "Unexpected error"
-      x-swagger-router-controller: "Contact"
   /contacts/{contactId}:
     get:
       tags:
@@ -317,7 +286,7 @@ paths:
         "404":
           description: "Unexpected error"
       x-swagger-router-controller: "Person"
-  /people/{personId}:
+  /people/findById/{personId}:
     get:
       tags:
       - "person"
@@ -340,6 +309,35 @@ paths:
             $ref: "#/definitions/Person"
         "400":
           description: "Invalid ID supplied"
+        "404":
+          description: "Person not found"
+      x-swagger-router-controller: "Person"
+  /people/findByRole{personRole}:
+    get:
+      tags:
+      - "person"
+      summary: "Find people by role"
+      description: "Returns all people with a specific role"
+      operationId: "getPersonByRole"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "personRole"
+        in: "path"
+        description: "Role of people to return"
+        required: true
+        type: "string"
+        enum:
+        - "Founder"
+        - "Expert"
+        - "Volunteer"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Person"
+        "400":
+          description: "Invalid role supplied"
         "404":
           description: "Person not found"
       x-swagger-router-controller: "Person"
